--- a/style.css
+++ b/style.css
@@ -1,18 +1,50 @@
-* {
+/* * {
     border: 1px solid red;
+} */
+
+
+:root {
+    --primary-dark: #333;
+    --primary-light: #ededed;
+    --secondary-light: #fefefe;
 }
 
-* ::before::after{
+
+*,
+* ::before,
+*::after{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    background-color: var(--primary-light);
+    color: var(--primary-dark);
+}
+
 main {
     font-family: 'Source Sans Pro', sans-serif;
+    flex: 1;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 #left {
@@ -26,14 +58,17 @@ main {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     margin: 0;
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 600;
+    color: var(--primary-dark);
 }
+
 
 #controls {
     /* align-self: stretch; */
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #canvas {
@@ -43,7 +78,7 @@ main {
     width: 600px;
     height: 600px;
     margin: auto;
-    border: 1px solid black;
+    border: 2px solid var(--primary-dark);
 }
 
 #canvas.markerMode {
@@ -65,18 +100,111 @@ main {
     flex: 1;
 }
 
-button {
+button,
+input {
+    border-style: none;
+    transition: transform 0.1s ease-in-out;
+}
+
+.btn {
     width: 200px;
     height: 50px;
     margin: 15px;
+    color: var(--primary-dark);
+    font-size: 16px;
+    border: 1px solid var(--primary-dark);
+    border-radius: 8px;
 }
 
- button,
+.btn:hover {
+    background-color: var(--primary-dark);
+    color: var(--primary-light);
+    transform: scale(1.05);
+    cursor: pointer;
+    border: 1px solid var(--secondary-light);
+}
+
+#clearBtn:hover {
+    color: inherit;
+    border: 1px solid var(--primary-dark);
+    background-color: inherit;
+}
+
+.btn.active {
+    background-color: var(--primary-dark);
+    color: var(--primary-light);
+}
+
+ .btn,
  #controls p {
     margin: 15px;
+    color: var(--primary-dark);
 }
 
 #controls p {
     text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+#footerText {
+    margin: 25px;
+}
+
+input[type='range'] {
+    -webkit-appearance: none;
+    background-color: var(--primary-light);
+    width: 200px;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    border: 1px solid var(--primary-dark);
+    border-radius: 5px;
+    background: var(--secondary-light);
+}
+
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 25px;
+    background: var(--primary-dark);
+    margin-top: -4px;
+}
+
+input[type='range']::-webkit-slider-thumb:hover {
+    cursor: pointer;
+}
+
+input[type='color'] {
+    height: 80px;
+    width: 80px;
+    -webkit-appearance: none;
+    border: none;
+    box-sizing: content-box;
+    margin-bottom: 15px;
+}
+
+input[type='color']:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+input[type='color']::-webkit-color-swatch {
+    border: none;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
+input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+    
+  }
+
+input[type='color']:active {
+    transition: transform 0.05s ease-in-out;
+    transform: scale(1);
 }
