--- a/style.css
+++ b/style.css
@@ -195,7 +195,8 @@ input[type='color']:hover {
 
 input[type='color']::-webkit-color-swatch {
     border: none;
-    border-radius: 100%;
+    border-radius: 10px;
+    transform: scale(1.1);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
